# bazel_xml_validation

./: .gitignore  AndroidManifest.xml  BUILD.bazel  WORKSPACE
src/androidTest/java/com/matthewcheok/elsa/: ExampleInstrumentedTest.kt
src/main/: AndroidManifest.xml  BUILD.bazel
src/main/java/com/matthewcheok/bazeltest/: MainActivity.kt
src/main/res/layout/: activity_main.xml
src/main/res/values/: colors.xml  strings.xml
src/test/java/com/matthewcheok/elsa/: ExampleUnitTest.kt
